# drf-kata

./: .gitignore  README.md  pyproject.toml
docs/blog-api-kata/: README.md  setup-python-environment-kata.md
src/tests/: simple_test.py
