[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drfblog"
version = "0.1.0"
description = "Blog API with Django Rest Framework"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name="Your Name", email="you@example.com"}
]
dependencies = [
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages]
find = {where = ["src"]}

# [tool.setuptools.packages.find]
# where = ["src"]
